--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,39 @@
+# Git Dir
 .cfg
+
+# System files
+**/.Trash
+**/.DS_Store
+.cache
+.cups
+.oracle_jre_usage
+.bundle
+.gsutil
+.lesshst
+.mkshrc
+.nvm
+
+# Secrets
+.ssh
+*.kdbx
+.aws/
+.gnupg/
+.npmrc
+.terraform.d/
+
+# Backups
+*.backup
+
+# Configuration files
+.config/
+.yarnrc
+.vscode/
+.gem
+.npmrc
+.eslintrc
+
+#History
+.zsh_history
+.node_repl_history
+.irb-history
+.zsh_sessions
