fix(dotfiles): fix typo and update readme

--- a/.gitconfig
+++ b/.gitconfig
@@ -22,3 +22,8 @@
   ci = commit
   st = status
   pom = pull origin main
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
