--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 	email = 36774583+kodjoz@users.noreply.github.com
 [credential]
 	helper = osxkeychain
-	helper = /usr/local/share/gcm-core/git-credential-manager-core
+	helper = /usr/local/bin/git-credential-manager-core
 [credential "https://dev.azure.com"]
 	useHttpPath = true
 [init]
@@ -22,3 +22,5 @@
   ci = commit
   st = status
   pom = pull origin main
+[pull]
+	rebase = false
