--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 
 # Configuration files
 .config/
+.gitconfig
 .yarnrc
 .vscode/
 .gem
@@ -36,6 +37,8 @@
 .p10k.zsh
 
 #History
+.history
+.bash_history
 .zsh_history
 .node_repl_history
 .irb-history
